--- a/src/Osu.Music.UI/UserControls/SpectrumAnalyzers/DemoSpectrumAnalyzer.xaml
+++ b/src/Osu.Music.UI/UserControls/SpectrumAnalyzers/DemoSpectrumAnalyzer.xaml
@@ -1,10 +1,5 @@
 ﻿<UserControl x:Class="Osu.Music.UI.UserControls.SpectrumAnalyzers.DemoSpectrumAnalyzer"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Osu.Music.UI.UserControls.SpectrumAnalyzers">
-    <Canvas Background="Black">
-        <Polyline x:Name="polyline1" Stroke="Yellow" StrokeThickness="1"/>
-    </Canvas>
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <Canvas x:Name="canvas" Background="Transparent"/>
 </UserControl>
