--- a/src/Osu.Music.UI/UserControls/SpectrumAnalyzers/DefaultSpectrumVisualizer.xaml
+++ b/src/Osu.Music.UI/UserControls/SpectrumAnalyzers/DefaultSpectrumVisualizer.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Osu.Music.UI.UserControls.SpectrumAnalyzers.DemoSpectrumAnalyzer"
+﻿<UserControl x:Class="Osu.Music.UI.UserControls.SpectrumAnalyzers.DefaultSpectrumVisualizer"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Canvas x:Name="canvas" Background="Transparent"/>
