--- a/_layouts/head-custom.html
+++ b/_layouts/head-custom.html
@@ -1,1 +1,1 @@
-<link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/Laritello/osu-music/gh-pages/favicon.ico">
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
