--- a/_layouts/head-custom.html
+++ b/_layouts/head-custom.html
@@ -1,1 +1,1 @@
-<link rel="shortcut icon" type="image/x-icon" href="{{ "favicon.ico"  | absolute_url }}">
+<link rel="shortcut icon" type="image/x-icon" href="{{ "assets/favicon.ico"  | absolute_url }}">
