--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,8 @@
     <meta name="theme-color" content="#157878">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    {% include head-custom.html %}
+    <link rel="shortcut icon" href="{{ "/assets/favicon.ico"  | relative_url }}" type="image/x-icon">
+	{% include head-custom.html %}
   </head>
   <body>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
